# fishbot-motion-control

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/config/include/: config.h  task_config.h
components/drivers/nvs/: CMakeLists.txt  nvs.c
components/drivers/store/: CMakeLists.txt  store.c
components/fishbot/: CMakeLists.txt  fishbot.c  fishbot_config.c
components/fishbot/include/: fishbot.h  fishbot_config.h
components/fishbot/protocol/: uart_protocol.c
components/libs/esp32_i2c_rw/: CMakeLists.txt  LICENSE  README.md  esp32_i2c_rw.c
components/libs/imu_ahrs/: CMakeLists.txt  MadgwickAHRS.c  MahonyAHRS.c
components/libs/pid/: CMakeLists.txt  pid.c
components/libs/pid_controller/: CMakeLists.txt  pid_controller.c
components/protocol/include/: protocol.h
components/protocol/proto/: CMakeLists.txt  component.mk  protocol.c
components/protocol/proto_define/: CMakeLists.txt  proto_v1.0.0.20220621.c  proto_v1.0.0.20220806.c
components/protocol/proto_utils/: CMakeLists.txt  proto_utils.c  proto_v1.0.0.20220621.c  (+1 more)
docs/esp32-mpu6050/: mpu6050.c
docs/nvs/: nvs.c  nvs.h
driver/: README.md  sdkconfig
driver/components/udp_client/: CMakeLists.txt
driver/components/udp_client/include/: udp_client.h
driver/components/udp_client/src/: udp_client.c
driver/main/: main.c
driver/test/: udp_server.py
hardware/: PCB_fishbotv0.1_2022-03-06.pcbdoc  fishbotv0.1_2022-03-06.schdoc
main/: main.c
test/: tcp_server.py  udp_server.py
test/pack/: pack_test.ipynb
test/test_struct/: test_s.cpp
(+77 files in other folders)
